# Myst_test

./: H1.md  H2.md  colortest.md  customadmonition.md  doitest.md  myst.yml  pyproject.toml  test.md  test100.ipynb  test2.ipynb  test2.tex  testfile.ipynb  toets.md  vpythontest.ipynb
.github/workflows/: deploy.yml
_static/: custom.js
plugins/: Thebe.mjs  experiment.mjs  intermezzo.mjs  pdf_exercise.mjs
style/: custom.css
template/: template.tex
typst-template/: template.typ  template.yml
